# camdl

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CLEANUP-prior-types.md  Makefile  NOTES_ir.md  NOTES_runtime.md  NOTICE  README.md  TYPES-REFERENCE.md  agent-channel-noid.md  agent-channel.md  camdl-language-spec.md  cleanup.md  compartmental-ir-spec.md  install.sh  issues-mod-period-dt-trap.md  mprocs.yaml  project-structure.md  refactor-plan.md  review.md  todo.md  transforms.md  typhoid-issues.md
ocaml/: .gitignore  camdl.opam  dune-project
ocaml/golden/: bimolecular.camdl  bimolecular.ir.json  branching_si_symp_asym.camdl  branching_si_symp_asym.ir.json  malaria_two_species.camdl  malaria_two_species.ir.json  malaria_two_species.params.toml  polio_age.camdl  polio_age.ir.json  polio_age.params.toml  polio_spatial_5.camdl  polio_spatial_5.ir.json  polio_spatial_5.params.toml  ross_macdonald.camdl  ross_macdonald.ir.json  seir_age.camdl  seir_age.ir.json  seir_age_table_rates.camdl  seir_age_table_rates.ir.json  seir_defines_adj.camdl  seir_defines_adj.ir.json  seir_defines_patch.camdl  seir_defines_patch.ir.json  seir_erlang.camdl  seir_erlang.ir.json  seir_erlang.params.toml  seir_erlang_staged.camdl  seir_erlang_staged.ir.json  seir_erlang_staged.params.toml  seir_observations.camdl  seir_observations.ir.json  seir_seasonal_patch.camdl  seir_seasonal_patch.ir.json  seir_spatial_5_inference.camdl  seir_spatial_5_inference.ir.json  seir_vaccine.camdl  seir_vaccine.ir.json  seir_vaccine.params.toml  seir_vaccine_seasonal.camdl  seir_vaccine_seasonal.ir.json  (+30 more)
ocaml/golden/data/: seir_defines_adj_pop.tsv  seir_defines_adj_w.tsv  seir_defines_pop.tsv  sir_init_n0.csv  sir_init_n0.tsv
ocaml/golden/defaults/: seir_age-baseline.toml  seir_age-child_driven.toml  seir_age.toml  seir_erlang-baseline.toml  seir_erlang-slow_progression.toml  seir_erlang.toml  seir_erlang_staged-baseline.toml  sir_basic-baseline.toml  sir_basic-high_r0.toml  sir_basic.toml  sir_coupling-baseline.toml  sir_coupling-high_coupling.toml  sir_coupling.toml  sir_demography-baseline.toml  sir_demography-endemic.toml  sir_demography.toml  sir_five_age-baseline.toml  sir_five_age-slow.toml  sir_five_age.toml  sir_two_patch-baseline.toml
ocaml/golden/errors/: e300_missing_susceptible.camdl  e300_rate_is_probability.camdl  e301_exp_of_count.camdl  e302_add_count_and_rate.camdl  e302_iota_bare_const.camdl  e303_param_inconsistent.camdl
ocaml/lib/compiler/: ast.ml  compiler.ml  diagnostics.ml  dune  expander.ml  inspect.ml  lexer.mll  parser.mly  parser_errors.ml  pp_expr.ml  source_cache.ml  term_style.ml
ocaml/lib/ir/: autodiff.ml  deserialize.ml  dimcheck.ml  dune  ir.ml  ir.mli  serde.ml  serialize.ml  validate.ml
ocaml/test/: dune  test_compiler.ml  test_dimcheck.ml  test_ir_roundtrip.ml
ocaml/test/errors/: e001_lex_error.camdl  e001_parse_error.camdl  e100_multiple_errors.camdl  e100_undeclared_compartment.camdl  e100_undeclared_param.camdl  e100_undeclared_table.camdl
python/: pyproject.toml
python/camdl_analysis/: __init__.py  _load.py  _toml.py  cli.py  convergence.py  response.py  scatter.py  sensitivity.py  voi.py
rust/: Cargo.toml  rust-toolchain.toml
rust/.cargo/: config.toml
rust/crates/cli/: Cargo.toml  build.rs
rust/crates/cli/src/: analyze.rs  batch.rs  browse.rs  cas.rs  compare.rs  data.rs  eval.rs  evidence.rs  experiment.rs  hashing.rs  if2.rs  landscape_html.rs  main.rs  pfilter.rs  profile.rs  progress.rs  run_meta.rs  run_paths.rs  sampling.rs  serve.rs  style.rs  summarize.rs  survey.rs  util.rs  version.rs  voi.rs
rust/crates/cli/src/args/: mod.rs  types.rs
rust/crates/cli/src/cas/: fit_inputs.rs  mod.rs  sim_inputs.rs  typed.rs
rust/crates/cli/src/fit/: clean_eval.rs  config.rs  config_diff.rs  config_v2.rs  dt_check.rs  fit_summary.rs  fit_table.rs  fit_tree.rs  gating.rs  init.rs  loglik_eval.rs  method_result.rs  methods.rs  mod.rs  nlopt_stage.rs  (+13 more)
rust/crates/cli/tests/: backend_provenance.rs  cas_integration.rs  compile_output_flag.rs  fit_experiment_management.rs  intervention_event_defaults.rs  parameter_bounds_validation.rs  pfilter_trajectories.rs  pgas_resume.rs  profile_multi_stream.rs  scenario_runtime_application.rs  synthetic_fit_grid.rs
rust/crates/external-harness/: Cargo.toml
rust/crates/external-harness/src/: compare.rs  hashing.rs  lib.rs  main.rs  manifest.rs  runner.rs  subprocess.rs  summarise.rs  summary.rs
rust/crates/io/: Cargo.toml
rust/crates/io/src/: lib.rs
rust/crates/ir/: Cargo.toml
rust/crates/ir/src/: envelope.rs  expr.rs  intervention.rs  lib.rs  model.rs  observation.rs  ode_equation.rs  parameter.rs  table.rs  time_func.rs  transition.rs  validate.rs
rust/crates/observe/: Cargo.toml
rust/crates/observe/src/: lib.rs
rust/crates/sim/: Cargo.toml
rust/crates/sim/benches/: inference.rs
rust/crates/sim/src/: chain_binomial.rs  compiled_model.rs  config.rs  ekrng.rs  error.rs  eval_stats.rs  gillespie.rs  intervention.rs  lib.rs  ode.rs  ode_integrator.rs  output.rs  periodic_bspline.rs  propensity.rs  resolved_expr.rs  rng.rs  simulate.rs  state.rs  tau_leap.rs  time.rs  transition_diagnostics.rs
rust/crates/sim/tests/: bimolecular_conservation.rs  branching_destinations.rs  chain_binomial_invariants.rs  cubic_spline.rs  ekrng_determinism.rs  erlang_distribution.rs  expr_eval.rs  fourier_oracle.rs  gillespie_determinism.rs  gillespie_invariants.rs  golden_simulate.rs  gradient_check.rs  hierarchical_log_density.rs  if2.rs  interpolation.rs  intervention_dt_invariance.rs  interventions.rs  multi_stream_obs.rs  obs_level_params.rs  ode.rs  particle_filter.rs  periodic_bspline_oracle.rs  periodic_forcing.rs  pgas_resume.rs  pgas_tempering.rs  pmmh.rs  pmmh_hierarchical.rs  resolved_expr.rs  rng_extreme_inputs.rs  scenario_application.rs  simplex.rs  smoke_all_golden.rs  snapshot_projections.rs  sparse_propensity.rs  spatial_density.rs  statistical_distribution.rs
rust/crates/wasm/: Cargo.toml
rust/crates/wasm/src/: lib.rs
rust/src/: lib.rs
rust/tests/: external_validation.rs  golden_deser.rs
(+314 files in other folders)
