opam-version: "2.0"
name: "camdl"
version: "0.1.0"
synopsis: "Stochastic compartmental epidemic modelling"
depends: [
  "ocaml"   {>= "5.0"}
  "dune"    {>= "3.0"}
  "menhir"  {>= "20200211"}
  "yojson"  {>= "2.0"}
  "fmt"     {>= "0.8"}
  "alcotest" {with-test}
  "qcheck-core" {with-test}
  "qcheck-alcotest" {with-test}
]
