[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "camdl-analysis"
version = "0.1.0"
description = "Figure generation for camdl sensitivity analysis output"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.7",
  "polars>=0.20",
  "defopt>=6.4",
]

[project.scripts]
camdl-analysis = "camdl_analysis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["camdl_analysis"]
