[package]
name = "camdl-tests"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
members = [
  ".",
  "crates/cli",
  "crates/io",
  "crates/ir",
  "crates/observe",
  "crates/sim",
]
resolver = "2"

[[test]]
name = "golden_deser"
path = "tests/golden_deser.rs"

[dev-dependencies]
ir = { path = "crates/ir" }
