[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "camdl-sim"
path = "src/main.rs"

[dependencies]
io = { path = "../io" }
ir = { path = "../ir" }
observe = { path = "../observe" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sim = { path = "../sim" }
toml = { version = "0.8", features = ["parse"] }
sha2 = "0.10"
hex = "0.4"
rayon = "1"
