[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "camdl-sim"
path = "src/main.rs"

[dependencies]
axum = "0.7"
bincode = "1"
csv = "1"
hex = "0.4"
indicatif = "0.17"
io = { path = "../io" }
ir = { path = "../ir" }
observe = { path = "../observe" }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sim = { path = "../sim" }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
toml = { version = "0.8", features = ["parse"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }

[dev-dependencies]
tempfile = "3"
