[package]
name = "sim"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1"
bitflags = "2"
ir = { path = "../ir" }
log = "0.4"
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }
rand_distr = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "inference"
harness = false
