[package]
name = "sim"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1"
bitflags = "2"
ir = { path = "../ir" }
# gh#audit-H2. libm provides high-precision erfc for the discretized-
# normal CDF tail accuracy fix (replaces the A&S 7.1.26 rational
# approximation with max abs error ~1.5e-7, which dominated tail
# probabilities for AFP-style rare-event surveillance).
libm = "0.2"
log = "0.4"
nlopt = { version = "0.8", optional = true }
rand = "0.8"
rand_chacha = { version = "0.3", features = ["serde1"] }
rand_distr = "0.4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[features]
default = ["ode"]
# `ode` gates the NLopt-backed deterministic-inference algorithms
# (nl-sbplx, nl-bobyqa) and — in later phases — `mh` and `nuts`.
# Default-on so install scripts and dev builds pick it up; can be
# disabled with `--no-default-features` for minimal builds.
ode = ["dep:nlopt"]

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "inference"
harness = false
