[package]
name = "camdl-wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ir = { path = "../ir" }
sim = { path = "../sim" }
getrandom = { version = "0.2", features = ["js"] }   # rand 0.8 ecosystem
getrandom3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }  # ahash
console_error_panic_hook = "0.1"
